# surely

./: LICENSE  README.md  sat.hs  surely.cabal  test  test.hs
AI/: Surely.hi  Surely.hs
