name:                surely
version:             0.3
synopsis:            A SAT/SMT solving algorithm exploiting Maybe
description:
    .
    Simple algorithm to solve a SAT or (coming soon) Lazy SMT problem instance,
    Maybe.
    .
    This library provides one function, solve, which accepts a list of list of
    integers representing a conjunction of disjunctions of unique literals. The
    polarity (+,-) of a literal determines its truth value.
    .
    TODO -> Backjumping and conflict-driven learning
    .
homepage:            https://github.com/gatlin/surely
bug-reports:         https://github.com/gatlin/surely/issues
license:             LGPL
license-file:        LICENSE
author:              Gatlin Johnson <gatlin@niltag.net>
maintainer:          Gatlin Johnson <gatlin@niltag.net>
-- copyright:
category:            AI
build-type:          Simple
cabal-version:       >=1.10

common warnings
  ghc-options:        -Wall

library
  exposed-modules:     AI.Surely
  other-modules:
  build-depends:       base,
                       monad-par
  ghc-options:         -O2 -funbox-strict-fields -Wall -threaded
  default-language:    GHC2021
